fixing lowercase bug and making next button invisible while player havent won or lost

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -64,6 +64,7 @@
     margin-top: 8px;
     padding: 12px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    display: none;
   }
 }
 @media(max-width: 700px){
